addition route to upgrade someone to seller role.
